[gd_scene load_steps=5 format=3 uid="uid://cjl3fdqlonmkb"]

[ext_resource type="Script" path="res://Modules/Objects/SmallCloud/cloud_piece.gd" id="1_o5hpr"]
[ext_resource type="Texture2D" uid="uid://o6hlkfxj3x8h" path="res://Modules/Art/Clouds/Cloud32x32.png" id="1_ow8h1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bs3uv"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_6xvha"]
radius = 23.0217

[node name="CloudPiece" type="RigidBody2D"]
gravity_scale = 0.1
max_contacts_reported = 4
contact_monitor = true
script = ExtResource("1_o5hpr")

[node name="CloudSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_ow8h1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CircleShape2D_bs3uv")
debug_color = Color(0.67451, 0.454902, 0.603922, 0.419608)

[node name="Area2D" type="Area2D" parent="."]
gravity_space_override = 1
gravity_point = true
gravity = 100.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_6xvha")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
